P06 add google tag manager

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,15 @@
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
   </head>
   <body>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z72W3JY1Y8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z72W3JY1Y8');
+</script>
     <app-root></app-root>
   </body>
 </html>
